--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Índice</h1>
         <h2>Proyectos</h2>
         <ol>
-            <li><a href="/proyectos/tarjetadefelicitacion">Tarjeta de Felicitación</a></li>
-            <li><a href="/proyectos/webviajes">Web de viajes</a></li>
-             <li><a href="/proyectos/librorecetas">Libro de Recetas</a></li>
+            <li><a href="/proyectos/tarjetadefelicitacion.html">Tarjeta de Felicitación</a></li>
+            <li><a href="/proyectos/webviajes.html">Web de viajes</a></li>
+             <li><a href="/proyectos/librorecetas.html">Libro de Recetas</a></li>
            
         </ol>
     <h2>Ejercicios</h2>
