--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </ol>
     <h2>Ejercicios</h2>
     <ol>
-        <li><a href="/ejercicios/1">Ejemplos de listas</a></li>
-        <li><a href="/ejercicios/2">Imagenes</a></li>
-        <li><a href="/ejercicios/3">Tablas</a></li>
+        <li><a href="/ejercicios/1.html">Ejemplos de listas</a></li>
+        <li><a href="/ejercicios/2.html">Imagenes</a></li>
+        <li><a href="/ejercicios/3.html">Tablas</a></li>
     </ol>
    
