--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         <li><a href="/ejercicios/imagenes.html">Imagenes</a></li>
         <li><a href="/ejercicios/tablas.html">Tablas</a></li>
     </ol>
-        <h2>invitacion</h2>
-        <li><a href="/invitacion/invitacion.html">Libro de Recetas</a></li>
+        <h2>Invitación</h2>
+        <li><a href="/invitacion/invitacion.html">Invitación al curso</a></li>
    
