--- a/invitacion/invitacion.html
+++ b/invitacion/invitacion.html
@@ -25,6 +25,15 @@
         td{
 	padding:15px
 	}
+	.button{
+	font-size: 16px;	
+	}
+	.button1:hover{
+ 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+	}
+
+
         </style>
     </head>
     <body>
@@ -43,7 +52,7 @@ En este curso de 200 horas de duración adquirirás conocimientos<br> de grandes
 	<li>Análisis</li>
 	</ul>
 	<p>
-	A medida que avances en el temario aprenderás no solo fórmulas y<br> teoremas. También podrás ver la demostración y aplicaciones a casos prácticos.
+	A medida que avances en el temario aprenderás no solo fórmulas y<br> teoremas. También podrás ver la demaostración y aplicaciones a casos prácticos.
 	</p>
         </div>
 
@@ -62,7 +71,7 @@ En este curso de 200 horas de duración adquirirás conocimientos<br> de grandes
 	<td align="center"><img src="https://media.istockphoto.com/vectors/diciembre-1-december-1-date-visible-on-a-page-a-day-organizer-in-vector-id1128241242" width="100px"></td>
 	</tr>
 	<tr>
-	<td id="buton"><button type="button" onclick="alert('¿Quieres inscribirte?')">Confirmar</button></td>
+	<td id="buton"><button class="button button1"type="button" onclick="alert('¿Quieres inscribirte?')">Confirmar</button></td>
 
 </table>
       
