--- a/invitacion/invitacion.html
+++ b/invitacion/invitacion.html
@@ -52,7 +52,7 @@ En este curso de 200 horas de duración adquirirás conocimientos<br> de grandes
 	<li>Análisis</li>
 	</ul>
 	<p>
-	A medida que avances en el temario aprenderás no solo fórmulas y<br> teoremas. También podrás ver la demaostración y aplicaciones a casos prácticos.
+	A medida que avances en el temario aprenderás no solo fórmulas y<br> teoremas. También podrás ver la demostración y aplicaciones a casos prácticos.
 	</p>
         </div>
 
