--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </div>
       <div id="lateral">
 	<p><i>Los ejercicios han sido obtenidos de la página</i></p>
-	<img src="https://yt3.ggpht.com/a/AGF-l79p3jUPEg6YWsreUc4hnU5hEViaakt4rovA4Q=s900-c-k-c0xffffffff-no-rj-mo" width= 30% class="khan" href="https://es.khanacademy.org/">
+	<img src="https://yt3.ggpht.com/a/AGF-l79p3jUPEg6YWsreUc4hnU5hEViaakt4rovA4Q=s900-c-k-c0xffffffff-no-rj-mo" width= 30% class="khan">
+	<a href="https://es.khanacademy.org/">Khan Academy</a>      
       </div>
     
 
